build_log.txt

> Task :eventDeploy
Not running deploy task, skipping commit

> Task :createVersionFile
createVersionFile called. Path C:\Users\david\dev\robotics\frc\MARSLib\src\main\java\frc\robot

> Task :spotlessInternalRegisterDependencies UP-TO-DATE
> Task :spotlessGroovyGradle
> Task :spotlessGroovyGradleApply
> Task :spotlessJava
> Task :spotlessJavaApply
> Task :spotlessJson
> Task :spotlessJsonApply
> Task :spotlessMisc
> Task :spotlessMiscApply
> Task :spotlessApply
> Task :compileJava
> Task :processResources NO-SOURCE
> Task :classes

> Task :compileTestJava FAILED
C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\mechanisms\MARSIntakeTest.java:31: error: cannot find symbol
    assertEquals(0.0, io.getAppliedVolts(), 0.1);
                        ^
  symbol:   method getAppliedVolts()
  location: variable io of type FlywheelIOSim
C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\mechanisms\MARSIntakeTest.java:36: error: cannot find symbol
    io.updateInputs(new FlywheelIO.FlywheelIOInputsAutoLogged());
                                  ^
  symbol:   class FlywheelIOInputsAutoLogged
  location: interface FlywheelIO
C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\mechanisms\MARSIntakeTest.java:37: error: cannot find symbol
    assertEquals(12.0, io.getAppliedVolts(), 0.1);
                         ^
  symbol:   method getAppliedVolts()
  location: variable io of type FlywheelIOSim
C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\mechanisms\MARSIntakeTest.java:42: error: cannot find symbol
    io.updateInputs(new FlywheelIO.FlywheelIOInputsAutoLogged());
                                  ^
  symbol:   class FlywheelIOInputsAutoLogged
  location: interface FlywheelIO
C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\mechanisms\MARSIntakeTest.java:43: error: cannot find symbol
    assertEquals(0.0, io.getAppliedVolts(), 0.1);
                        ^
  symbol:   method getAppliedVolts()
  location: variable io of type FlywheelIOSim
C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\mechanisms\MARSIntakeTest.java:59: error: cannot find symbol
      io.updateInputs(new FlywheelIO.FlywheelIOInputsAutoLogged());
                                    ^
  symbol:   class FlywheelIOInputsAutoLogged
  location: interface FlywheelIO
C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\mechanisms\MARSIntakeTest.java:63: error: cannot find symbol
    assertEquals(12.0, io.getAppliedVolts(), 0.1);
                         ^
  symbol:   method getAppliedVolts()
  location: variable io of type FlywheelIOSim
C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\mechanisms\MARSIntakeTest.java:68: error: cannot find symbol
    io.updateInputs(new FlywheelIO.FlywheelIOInputsAutoLogged());
                                  ^
  symbol:   class FlywheelIOInputsAutoLogged
  location: interface FlywheelIO
C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\mechanisms\MARSIntakeTest.java:70: error: cannot find symbol
    assertEquals(0.0, io.getAppliedVolts(), 0.1);
                        ^
  symbol:   method getAppliedVolts()
  location: variable io of type FlywheelIOSim
C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\mechanisms\MARSIntakeTest.java:78: error: cannot find symbol
      io.updateInputs(new FlywheelIO.FlywheelIOInputsAutoLogged());
                                    ^
  symbol:   class FlywheelIOInputsAutoLogged
  location: interface FlywheelIO
C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\mechanisms\MARSIntakeTest.java:80: error: cannot find symbol
    assertEquals(-12.0, io.getAppliedVolts(), 0.1);
                          ^
  symbol:   method getAppliedVolts()
  location: variable io of type FlywheelIOSim
11 errors
Compilation Error!
GradleRIO detected this build failed due to a Compile Error (compileTestJava).

Check that all your files are saved, then scroll up in this log for more information.
[Incubating] Problems report is available at: file:///C:/Users/david/dev/robotics/frc/MARSLib/build/reports/problems/problems-report.html
13 actionable tasks: 12 executed, 1 up-to-date
FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\mechanisms\MARSIntakeTest.java:31: error: cannot find symbol
      assertEquals(0.0, io.getAppliedVolts(), 0.1);
                          ^
    symbol:   method getAppliedVolts()
    location: variable io of type FlywheelIOSim
  C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\mechanisms\MARSIntakeTest.java:37: error: cannot find symbol
      assertEquals(12.0, io.getAppliedVolts(), 0.1);
                           ^
    symbol:   method getAppliedVolts()
    location: variable io of type FlywheelIOSim
  C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\mechanisms\MARSIntakeTest.java:43: error: cannot find symbol
      assertEquals(0.0, io.getAppliedVolts(), 0.1);
                          ^
    symbol:   method getAppliedVolts()
    location: variable io of type FlywheelIOSim
  C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\mechanisms\MARSIntakeTest.java:63: error: cannot find symbol
      assertEquals(12.0, io.getAppliedVolts(), 0.1);
                           ^
    symbol:   method getAppliedVolts()
    location: variable io of type FlywheelIOSim
  C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\mechanisms\MARSIntakeTest.java:70: error: cannot find symbol
      assertEquals(0.0, io.getAppliedVolts(), 0.1);
                          ^
    symbol:   method getAppliedVolts()
    location: variable io of type FlywheelIOSim
  C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\mechanisms\MARSIntakeTest.java:80: error: cannot find symbol
      assertEquals(-12.0, io.getAppliedVolts(), 0.1);
                            ^
    symbol:   method getAppliedVolts()
    location: variable io of type FlywheelIOSim
  C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\mechanisms\MARSIntakeTest.java:36: error: cannot find symbol
      io.updateInputs(new FlywheelIO.FlywheelIOInputsAutoLogged());
                                    ^
    symbol:   class FlywheelIOInputsAutoLogged
    location: interface FlywheelIO
  C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\mechanisms\MARSIntakeTest.java:42: error: cannot find symbol
      io.updateInputs(new FlywheelIO.FlywheelIOInputsAutoLogged());
                                    ^
    symbol:   class FlywheelIOInputsAutoLogged
    location: interface FlywheelIO
  C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\mechanisms\MARSIntakeTest.java:59: error: cannot find symbol
        io.updateInputs(new FlywheelIO.FlywheelIOInputsAutoLogged());
                                      ^
    symbol:   class FlywheelIOInputsAutoLogged
    location: interface FlywheelIO
  C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\mechanisms\MARSIntakeTest.java:68: error: cannot find symbol
      io.updateInputs(new FlywheelIO.FlywheelIOInputsAutoLogged());
                                    ^
    symbol:   class FlywheelIOInputsAutoLogged
    location: interface FlywheelIO
  C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\mechanisms\MARSIntakeTest.java:78: error: cannot find symbol
        io.updateInputs(new FlywheelIO.FlywheelIOInputsAutoLogged());
                                      ^
    symbol:   class FlywheelIOInputsAutoLogged
    location: interface FlywheelIO
  11 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 3s
